Implement thumbnailer daemon